--- a/src/main/java/com/iglnierod/gamearchive/view/game/GamePreviewPanel.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/game/GamePreviewPanel.form
@@ -102,6 +102,7 @@
           <Font name="Liberation Sans" size="17" style="1"/>
         </Property>
         <Property name="verticalAlignment" type="int" value="1"/>
+        <Property name="focusable" type="boolean" value="false"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[30, 150]"/>
         </Property>
