--- a/src/main/java/com/iglnierod/gamearchive/view/game/panel/GamePreviewPanel.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/game/panel/GamePreviewPanel.form
@@ -133,6 +133,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/icons/round_star_white_24dp.png"/>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Add to favourite"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JSeparator" name="separator">
