Exportar lista a JSON

--- a/src/main/java/com/iglnierod/gamearchive/view/home/list/dialog/AddToListDialog.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/home/list/dialog/AddToListDialog.form
@@ -98,7 +98,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Calcel"/>
+        <Property name="text" type="java.lang.String" value="Cancel"/>
       </Properties>
     </Component>
   </SubComponents>
