--- a/src/main/java/com/iglnierod/gamearchive/view/home/list/dialog/EditListDialog.form
+++ b/src/main/java/com/iglnierod/gamearchive/view/home/list/dialog/EditListDialog.form
@@ -80,7 +80,7 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="cancelButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Calcel"/>
+            <Property name="text" type="java.lang.String" value="Cancel"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[74, 24]"/>
             </Property>
